<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:focusable="true"
	android:focusableInTouchMode="true" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/activity_main_status"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0012aa" />

    <TextView
        android:id="@+id/activity_main_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_below="@+id/textView"
        android:text="@string/activity_main_status_waiting"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activity_main_status"
        android:layout_below="@+id/activity_main_status"
        android:layout_marginTop="12dp"
        android:text="@string/activity_main_file"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0012aa" />

    <EditText
        android:id="@+id/activity_main_editbox_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:editable="false"
        android:hint="@string/activity_main_editbox_file_hint" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activity_main_editbox_file"
        android:layout_marginTop="12dp"
        android:text="@string/activity_main_mode"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0012aa" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/activity_main_mode_single_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_mode_single_run_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:checked="true" />

        <RadioButton
            android:id="@+id/activity_main_mode_single_loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_mode_single_loop_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RadioGroup>

    <Button
        android:id="@+id/activity_main_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="24dp"
        android:text="@string/activity_main_start_text" />

    <Button
        android:id="@+id/activity_main_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/activity_main_start"
        android:layout_alignBottom="@+id/activity_main_start"
        android:layout_toRightOf="@+id/activity_main_start"
        android:text="@string/activity_main_stop_text" />

    <Button
        android:id="@+id/activity_main_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/activity_main_stop"
        android:layout_alignBottom="@+id/activity_main_stop"
        android:layout_toRightOf="@+id/activity_main_stop"
        android:text="@string/activity_main_restart_text" />

</RelativeLayout>
</ScrollView>